Finished all user stories and added tests for the backend.